# Tetris

./: .gitignore  README.md  Tetris.sln  license.md
Tetris/: Bag_of_Seven.h  CMakeLists.txt  Tetris.cpp  Tetris.h  Tetris.vcxproj  Tetris.vcxproj.filters  Tetris_Definitions.h  Tetris_Draw.h  Tetris_Draw_Console_Factory.h  Tetris_Draw_Linux_Console.cpp  Tetris_Draw_Linux_Console.h  Tetris_Draw_Windows_Console.cpp  Tetris_Draw_Windows_Console.h  Tetris_Field.h  Tetris_Statistics.cpp  Tetris_Statistics.h  Tetromino.cpp  Tetromino.h  main.cpp
